--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "alesen-lite",
+    "short_name": "Alesen Lite",
     "name": "Alesen Lite",
     "description": "Simple note taking PWA application",
     "icons": [
